cabal-version:      2.4
name:               base64h
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Base64 encoding/decoding.

-- A longer description of the package.
description: Base64 encoding/decoding.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Anita Kai
maintainer:         anikaiful@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable base64h
    main-is:          Main.hs
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
